force-app/main/default/objects/GitHub_Issue__c/GitHub_Issue__c.object-meta.xml
<CustomObject>
    <label>GitHub Issue</label>
    <pluralLabel>GitHub Issues</pluralLabel>
    <nameField>
        <label>GitHub Issue Name</label>
        <type>AutoNumber</type>
        <displayFormat>ISSUE-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>