force-app/main/default/objects/GitHub_Issue__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Bug</fullName><default>false</default></value>
            <value><fullName>Feature</fullName><default>false</default></value>
            <value><fullName>Question</fullName><default>false</default></value>
            <value><fullName>Documentation</fullName><default>false</default></value>
            <value><fullName>Other</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>