force-app/main/default/objects/GitHub_Issue__c/fields/External_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Number__c</fullName>
    <label>External Number</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>