force-app/main/default/objects/GitHub_Issue__c/fields/Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Opened_Date__c</fullName>
    <label>Opened Date</label>
    <type>DateTime</type>
</CustomField>