force-app/main/default/objects/GitHub_Issue__c/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <label>Rationale</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>