force-app/main/default/objects/GitHub_Issue__c/fields/Repo__c.field-meta.xml
<CustomField>
    <fullName>Repo__c</fullName>
    <label>Repo</label>
    <type>Text</type>
    <length>100</length>
</CustomField>