force-app/main/default/objects/GitHub_Issue__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Critical</fullName><default>false</default></value>
            <value><fullName>High</fullName><default>false</default></value>
            <value><fullName>Medium</fullName><default>false</default></value>
            <value><fullName>Low</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>