force-app/main/default/objects/GitHub_Issue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default></value>
            <value><fullName>Classified</fullName><default>false</default></value>
            <value><fullName>Routed</fullName><default>false</default></value>
            <value><fullName>Escalated</fullName><default>false</default></value>
            <value><fullName>Closed</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>