force-app/main/default/objects/GitHub_Issue__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Text</type>
    <length>50</length>
</CustomField>